objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>For use in Public Calendar list views</description>
        <inlineHelpText>For use in Public Calendar list views and reports</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use in Public Calendars where user needs to be linked</description>
        <inlineHelpText>For use in Public Calendars where user needs to be linked</inlineHelpText>
        <label>Event Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Valuation_Date__c</fullName>
        <label>Initial Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Participants__c</fullName>
        <description>ABSA team members involved in event</description>
        <inlineHelpText>ABSA team members involved in event</inlineHelpText>
        <label>Internal Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsOverdue__c</fullName>
        <formula>AND(NOT(IsClosed), ActivityDate &lt; TODAY())</formula>
        <label>IsOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>IF(IsTask,
  IF(IsClosed,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3Ew&quot;, &quot;Green&quot;, 16, 16),
    IF(ActivityDate &gt;= TODAY(), 
      IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3Ey&quot;, &quot;Yellow&quot;, 16, 16) , 
      IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3Ex&quot;, &quot;Red&quot;, 16, 16) 
    ) 
  ),
  null
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of  Salesforce Team Calendar event(picklist value)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Team Building Event</fullName>
                </value>
                <value>
                    <fullName>Working Offsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Barclays_Event_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays Event ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>advpm__Action_Plan__c</fullName>
        <formula>IF( NOT(ISBLANK(advpm__TaskTemplateId__c)), HYPERLINK(&quot;/apex/advpm__Link?id=&quot;+ advpm__TaskTemplateId__c +&quot;&amp;dest=ActionPlan&quot; , &quot;View&quot; , &quot;_top&quot;), &quot;&quot;)</formula>
        <label>Action Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Level_of_Efforts__c</fullName>
        <label>Level of Efforts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Log_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <externalId>true</externalId>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__TimeId__c</fullName>
        <label>TimeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__TimeName__c</fullName>
        <label>TimeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Time_In_Hours__c</fullName>
        <label>Time (In Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Time__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ advpm__TimeId__c ,  advpm__TimeName__c , &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Entry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Visible_In_Client_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible In Client Portal</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Markets_Roadshows_Events</fullName>
        <booleanFilter>(1 or 2)</booleanFilter>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>Event_Owner__c</columns>
        <columns>Internal_Participants__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>ZeldaA</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>PriscleR</value>
        </filters>
        <label>Markets Roadshows &amp; Events</label>
        <sharedTo>
            <roleAndSubordinatesInternal>South_Africa_CIB_Markets</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>